apply  package customizations to touch package

--- a/Workspace1/packages/TouchPackageWS1/.sencha/package/build.properties
+++ b/Workspace1/packages/TouchPackageWS1/.sencha/package/build.properties
@@ -95,3 +95,5 @@ pkg.build.dir=${workspace.build.dir}/${package.name}
 pkg.file.name=${package.name}.pkg
 pkg.includes=**/*
 pkg.excludes=package.json
+
+skip.style=true
