update ExtApp2 to use ExtPackage and SharedPackage

--- a/Workspace1/ExtApp2/app.json
+++ b/Workspace1/ExtApp2/app.json
@@ -2,6 +2,8 @@
     "name": "ExtApp1",
 
     "requires": [
+        "SharedPackageWS1",
+        "ExtPackageWS1"
     ],
 
     "id": "49288ed1-8f2c-433f-92bf-34c5e0150ce6"
