--- a/Workspace2/packages/SharedPackageWS2/.sencha/package/sencha.cfg
+++ b/Workspace2/packages/SharedPackageWS2/.sencha/package/sencha.cfg
@@ -16,7 +16,7 @@ package.sass.namespace=Ext
 # This is the comma-separated list of folders where classes reside. These
 # classes must be explicitly required to be included in the build.
 #
-package.classpath=${package.dir}/src
+package.classpath=${package.dir}/src,${package.dir}/src-${framework.name}
 
 # This is the comma-separated list of folders of overrides. All files in this
 # path will be given a tag of "packageOverrides" which is automatically
