update TouchApp2 to use TouchPackage and SharedPackage

--- a/Workspace2/TouchApp2/app.json
+++ b/Workspace2/TouchApp2/app.json
@@ -125,6 +125,8 @@
      * List of package names to require for the cmd build process
      */
     "requires": [
+        "SharedPackageWS2",
+        "TouchPackageWS2"
     ],
 
     /**
