--- a/Workspace2/TouchApp1/app.json
+++ b/Workspace2/TouchApp1/app.json
@@ -125,6 +125,8 @@
      * List of package names to require for the cmd build process
      */
     "requires": [
+        "TouchPackageWS2",
+        "SharedPackageWS2"
     ],
 
     /**
