--- a/Workspace2/ExtApp1/app.json
+++ b/Workspace2/ExtApp1/app.json
@@ -2,6 +2,8 @@
     "name": "ExtApp1",
 
     "requires": [
+        "ExtPackageWS2",
+        "SharedPackageWS2"
     ],
 
     "id": "6925ef7a-f9a9-4ec6-9103-4bf09d66a1f4"
